--- a/package.json
+++ b/package.json
@@ -38,9 +38,7 @@
     "morgan": "^1.8.0",
     "pg": "^7.12.1",
     "resource-router-middleware": "^0.6.0",
-    "uuid": "^3.3.3"
-  },
-  "devDependencies": {
+    "uuid": "^3.3.3", 
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
