--- a/package.json
+++ b/package.json
@@ -31,20 +31,21 @@
   "author": "Jason Miller <jason@developit.ca>",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "compression": "^1.5.2",
-    "cors": "^2.7.1",
-    "express": "^4.13.3",
-    "morgan": "^1.8.0",
-    "pg": "^7.12.1",
-    "resource-router-middleware": "^0.6.0",
-    "uuid": "^3.3.3", 
+    "ajv": "^6.10.2",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.13.3",
+    "compression": "^1.5.2",
+    "cors": "^2.7.1",
     "eslint": "^3.1.1",
-    "nodemon": "^1.9.2"
+    "express": "^4.13.3",
+    "morgan": "^1.8.0",
+    "nodemon": "^1.9.2",
+    "pg": "^7.12.1",
+    "resource-router-middleware": "^0.6.0",
+    "uuid": "^3.3.3"
   },
   "bugs": {
     "url": "https://github.com/developit/express-es6-rest-api/issues"
